# macs

./: .gitignore  DESIGN.md  LICENSE  README.md  SPEC.md  pyproject.toml
collector/: collect_agents.py  collect_balance.py  run_collect.sh
data/: agent_tokens.jsonl  balance_snapshots.jsonl
decisions/: ADR-001-readonly-observability.md  ADR-002-a2a-auto-discovery.md  ADR-003-six-dimension-audit.md  ADR-004-token-budget-alerts.md  ADR-005-sqlite-to-postgresql.md  ADR-006-maea-macs-decoupling.md  ADR-TEMPLATE.md  README.md
docs/: README.md
examples/: sample_dump.json
integrations/hermes-plugin/: README.md  UPSTREAM.md  __init__.py  plugin.yaml
integrations/jes-gate/: README.md  jes-gate
macs/: __init__.py
macs/dump/: __init__.py  collector.py  model.py  schema.json  sinks.py  triggers.py
macs/dump/adapters/: __init__.py  base.py  hermes.py
poc/: go.mod  poc1_trimodel_failover_test.go  poc2_crash_recovery_test.go  poc3_identity_lifecycle_test.go  poc4_cluster_coordination_test.go  poc5_token_budget_test.go  poc6_cross_vendor_test.go
specs/: cadence-acceptance-tests.md  cadence-design.md  cadence-dev-spec.md  console-acceptance-tests.md  console-dev-spec.md  kernel-acceptance-tests.md  kernel-dev-spec.md  kernel-v0.2-acceptance-tests.md  kernel-v0.2-design.md  kernel-v0.2-dev-spec.md  poc-scenarios.md  security-model.md  state-rollback.md  xval-dfsms-vtam.md
tests/: _bootstrap.py  _enabled_check.py  integration_hermes_real.py  test_collector.py  test_hermes_adapter.py  test_triggers.py  test_vendored_plugin.py
trace-bridge/: spec.md
